@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2024-05-09T16:15:27Z",
-  "count_outdated" : 489,
-  "uniques_outdated" : 316,
-  "count" : 490,
-  "uniques" : 317,
+  "timestamp" : "2024-06-04T00:56:36Z",
+  "count_outdated" : 490,
+  "uniques_outdated" : 317,
+  "count" : 491,
+  "uniques" : 318,
   "clones" : [
     {
-      "timestamp": "2024-05-08T00:00:00Z",
+      "timestamp": "2024-06-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
